[project]
name = "jkj-multi-env-runner"
version = "0.1.0"
description = "Multi-env ablation runner for LS20 / KA59 / BP35 (unified Josh table)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.6",
    "openai>=2.29.0",
    "python-dotenv>=1.2.0",
    "numpy>=1.26",
    "pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
